--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,11 +43,12 @@
         <h1 class="headerh1 fontdancing">
             On Remue Sainté ! </h1>
         <nav class="nav">
-            <a class="nav-link active fontdancing fs-1 " aria-current="page" href="/accueil.php">Accueil</a>
-            <a class="nav-link fontdancing fs-1 " href="./commissions.php">Commissions</a>
-            <a class="nav-link fontdancing fs-1 " href="./ateliers.php">Ateliers</a>
-            <a class="nav-link fontdancing fs-1 " href="#">Remue Sainté !</a>
-            <a class="nav-link fontdancing fs-1 " href="#">Blog</a>
+            <a class="nav-link active fontdancing fs-3 " aria-current="page" href="/accueil.php">Accueil</a>
+            <a class="nav-link fontdancing fs-3 " href="./commissions.php">Commissions</a>
+            <a class="nav-link fontdancing fs-3 " href="./ateliers.php">Ateliers</a>
+            <a class="nav-link fontdancing fs-3 " href="./ateliers.php">Gallerie</a>
+            <a class="nav-link fontdancing fs-3 " href="#">Remue Sainté !</a>
+            <a class="nav-link fontdancing fs-3 " href="#">Blog</a>
 
 
         </nav>
@@ -60,14 +61,14 @@
   
     {% block body %}{% endblock %}
 
-    <footer class="container_fluid footer ">
-        <p class="col-3 fs-3 fontdancing">
+    <footer class="container_fluid footer row  ">
+        <p class="col-4 fs-6 fontdancing">
             Le Remue Meninges <br>
             Café culturel & associatif
         </p>
         <img class="div_footer_img col-3 " src="./assets/img/logo-rm-vide-blanc.png" alt="Logo Remue Meninges">
 
-        <p class="col-3 fs-3 fontdancing">
+        <p class="col-4 fs-6 fontdancing">
            43 Rue Michelet <br>
            42000 Saint-Etienne 
         </p>
