--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -52,7 +52,8 @@
     background-color: black;
     display: flex;
     align-items: center;
-    justify-content:space-around;
+    justify-content:center;
+    max-width: 100%;
    
    
   }
@@ -154,6 +155,13 @@
     justify-content: center;
   }
   
+
+  .fotos_accueil{
+
+    min-height: 100vh;
+    background-size: center cover;
+    max-width: 100%;
+  }
   
   
   
