--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,35 +43,40 @@
         <h1 class="headerh1 fontdancing">
             On Remue Sainté ! </h1>
         <nav class="nav">
-            <a class="nav-link active fontdancing fs-3 " aria-current="page" href="/accueil.php">Accueil</a>
-            <a class="nav-link fontdancing fs-3 " href="./commissions.php">Commissions</a>
-            <a class="nav-link fontdancing fs-3 " href="./ateliers.php">Ateliers</a>
-            <a class="nav-link fontdancing fs-3 " href="./ateliers.php">Gallerie</a>
-            <a class="nav-link fontdancing fs-3 " href="#">Remue Sainté !</a>
-            <a class="nav-link fontdancing fs-3 " href="#">Blog</a>
+            <a class="nav-link active fontdancing fs-3 " aria-current="page" href={{ url('accueil') }}>Accueil</a>
+            <a class="nav-link fontdancing fs-3 "  aria-current="page" href={{ url('app_commissions_') }} >Commissions</a>
+            <a class="nav-link fontdancing fs-3 "  aria-current="page"href={{ url('app_ateliers') }}>Ateliers</a>
+            <a class="nav-link fontdancing fs-3 "  aria-current="page"href={{ url('app_gallerie') }}  >Galerie</a>
+            <a class="nav-link fontdancing fs-3 "  aria-current="page"href={{ url('app_onremue')}}>Remue Sainté!</a>
+            <a class="nav-link fontdancing fs-3 "  aria-current="page" href={{ url('app_blog')}}>Blog</a>
 
 
         </nav>
     </header>
     <div class="header_2 container-fluid bg-light">
-        <a class="nav-link fs-4" href="#">Inscription</a>
-        <a class="nav-link fs-4" href="#">Connexion</a>
+        <a class="nav-link fs-4 header_2_a" href="#">Inscription</a>
+        <a class="nav-link fs-4 header_2_a" href="#">Connexion</a>
     </div>
 
   
     {% block body %}{% endblock %}
 
-    <footer class="container_fluid footer row  ">
-        <p class="col-4 fs-6 fontdancing">
-            Le Remue Meninges <br>
+    <footer class="container_fluid footer row justify-content-center flex-nowrap ">
+
+      
+        <p class="col-4 fs-6 mx-5 my-2 fontdancing ">
+            Le Remue Meninges 
             Café culturel & associatif
         </p>
-        <img class="div_footer_img col-3 " src="./assets/img/logo-rm-vide-blanc.png" alt="Logo Remue Meninges">
-
-        <p class="col-4 fs-6 fontdancing">
-           43 Rue Michelet <br>
+        <div class="div_footer_img col-4 ">
+        <img class="div_footer_img " src={{ absolute_url(asset('assets/img/logo-rm-vide-blanc.png'))}} alt="Logo Remue Meninges">
+         </div>
+        <p class="col-4 fs-6 mx-5 my-2 fontdancing">
+           43 Rue Michelet 
            42000 Saint-Etienne 
         </p>
+
+    
 
     </footer>
 </body>
