--- a/templates/commissions/index.html.twig
+++ b/templates/commissions/index.html.twig
@@ -6,7 +6,7 @@
 
 <main class="row container-fluid main_commissions">
 
-    <h1 class="fontdancing commissions_titre fs-1 col-5"> Les commissions du Remue </h1>
+    <h1 class="fontdancing commissions_titre fs-1 text-center"> Les commissions du Remue </h1>
     <p class=" commissions_p col-10 fs-5"> Bonjour et Bienvenue dans la page dédiée aux commissions du Remue. <br>
       C'est ici que se jour l'administration du café, c'est un peu la salle des machines... <br>
       Dans la mesure ou l'on traite ici de la mecanique interne du remue, cette partie du site est plus confidentielle,
@@ -16,13 +16,13 @@
       Si jamais tu souhaite t'investir dans une comissions, contacte nous vite !
     </p>
 
-    <div class="col-10">
+    
       <button class="btn btn-dark col-10 btn_com"> Bar</button>
       <button class="btn btn-dark col-10 btn_com"> Programmation</button>
       <button class="btn btn-dark col-10 btn_com"> Communication</button>
       <button class="btn btn-dark col-10 btn_com"> Comptabilité</button>
       <button class="btn btn-dark col-10 btn_com btn_end"> Stock</button>
-    </div>
+   
 
 
 
