--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -128,7 +128,7 @@
               Un rendez vous dominical et mensuel, ou l'on rencontre l'inconnu
               et ou l'inconnu nous rencontre!
             </p>
-            <a href="#" class="btn btn-dark">Go !</a>
+            <a href={{ url ('app_ateliers_dimanchedemots') }} class="btn btn-dark">Go !</a>
           </div>
         </div>
 
