ca_bug_ces_morts_sur_la_co

--- a/templates/ateliers/cafesignes.html.twig
+++ b/templates/ateliers/cafesignes.html.twig
@@ -6,26 +6,24 @@
 
 <main>
 
-  <h1 class="text-center sf-1 fontdancing mt-3"> Atelier d'Ecriture </h1>
+  <h1 class="text-center sf-1 fontdancing mt-3"> Café Signes</h1>
 
   <div class="container-fluid row">
 
   <div class="container-fluid col-10 ">
 
-  <p class="sf-4 p_dimanche de mots mt-3">
+  <p class="sf-4 p_dimanche de mots mt-3">Un moment dédié à la langue des signes avec des personnes sourdes, malentendantes ou entendantes, sachant signer ou en apprentissage. L’occasion de se rencontrer, et pour certains d’approfondir leurs connaissances de la Langue des Signes Française.
 
-    Temps d’écriture pour tous, décidé ensemble, puis à tour de rôle on se lit la création du jour. 
-    Pour s’entraîner ou essayer pour la première fois.
-    
+   <br>
    <br>
     
-    Rendez-vous bimensuel proposé par l’association Le Cercle des Lettres et des Arts.
+    Rendez-vous mensuel proposé par des bénévoles de l’association.
   </p>
 
  
 
   <div class="card col-12 align-self-center">
-    <img src={{ absolute_url(asset('assets/img/ateliers/ecriture/atelier_d_ecriture.jpg'))}} class="card-img" alt="...">
+    <img src={{ absolute_url(asset('assets/img/ateliers/langues/signes.jpg'))}} class="card-img" alt="...">
     <div class="card-img-overlay">
     </div>
      
@@ -61,7 +59,7 @@
 
 
   <h2 class="fontdancing text-center mt-5">Galerie Photos de l'atelier :</h2>
-  <div class="container-fluid col-10 d-flex justify-content-around flex-row flex-wrap border border-dark rounded mt-5 mb-5"> 
+  <div class="container-fluid col-10 d-flex flex-row flex-wrap justify-content-around border border-dark rounded mt-5 mb-5"> 
   
     
     <div class="card m-2" style="width: 18rem;">
