--- a/templates/ateliers/causerieslibertaires.html.twig
+++ b/templates/ateliers/causerieslibertaires.html.twig
@@ -6,26 +6,26 @@
 
 <main>
 
-  <h1 class="text-center sf-1 fontdancing mt-3"> Atelier d'Ecriture </h1>
+  <h1 class="text-center sf-1 fontdancing mt-3"> Les causeries Libertaires </h1>
 
   <div class="container-fluid row">
 
   <div class="container-fluid col-10 ">
 
-  <p class="sf-4 p_dimanche de mots mt-3">
+  <p class="sf-4 p_dimanche de mots mt-3">En nous appuyant sur les théories politiques anarchistes, nous souhaitons  traiter de l’anarchie comme théorie de l’organisation sociale.
 
-    Temps d’écriture pour tous, décidé ensemble, puis à tour de rôle on se lit la création du jour. 
-    Pour s’entraîner ou essayer pour la première fois.
+    Il s’agit d’une part de présenter les principes étayés par des expériences historiques (Mexique, Ukraine, Espagne, Chiapas, Rojava…), et d’autre part, d’identifier et de comprendre quels types d’actions engager au quotidien, comment les mettre en place dans une logique fédéraliste et de gestion directe.
     
-   <br>
+    <br>
+    <br>
     
-    Rendez-vous bimensuel proposé par l’association Le Cercle des Lettres et des Arts.
+    Rendez-vous mensuel proposé par des bénévoles.
   </p>
 
  
 
   <div class="card col-12 align-self-center">
-    <img src={{ absolute_url(asset('assets/img/ateliers/ecriture/atelier_d_ecriture.jpg'))}} class="card-img" alt="...">
+    <img src={{ absolute_url(asset('assets/img/ateliers/culture/anar.jpg'))}} class="card-img" alt="...">
     <div class="card-img-overlay">
     </div>
      
@@ -61,7 +61,7 @@
 
 
   <h2 class="fontdancing text-center mt-5">Galerie Photos de l'atelier :</h2>
-  <div class="container-fluid col-10 d-flex justify-content-around flex-row flex-wrap border border-dark rounded mt-5 mb-5"> 
+  <div class="container-fluid col-10 d-flex flex-row flex-wrap justify-content-around border border-dark rounded mt-5 mb-5"> 
   
     
     <div class="card m-2" style="width: 18rem;">
@@ -102,9 +102,6 @@
     </div>
     
   </div>
-
-
-
 
 
 
