--- a/templates/ateliers/dimanchedemots.html.twig
+++ b/templates/ateliers/dimanchedemots.html.twig
@@ -61,7 +61,7 @@
 
 
     <h2 class="fontdancing text-center mt-5">Galerie Photos de l'atelier :</h2>
-    <div class="container-fluid col-10 d-flex flex-row flex-wrap border border-dark rounded mt-5 mb-5"> 
+    <div class="container-fluid col-10 d-flex flex-row flex-wrap justify-content-around border border-dark rounded mt-5 mb-5"> 
     
       
       <div class="card m-2" style="width: 18rem;">
