--- a/templates/ateliers/index.html.twig
+++ b/templates/ateliers/index.html.twig
@@ -344,12 +344,15 @@
     </div>
     <div class="container-fluid container-cards row mt-5">
       <div class="card col-4 bg-black" style="width: 18rem">
-        <img src="./assets/img/trad.jpg" class="card-img-top" alt="..." />
+        <img src={{ absolute_url(asset('assets/img/ateliers/culture/Queer_2.jpg'))}} class="card-img-top" alt="..." />
         <div class="card-body bg-black">
           <h5 class="card-title text-white">Le point Queer</h5>
           <p class="card-text text-white">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            Partageons nos savoirs autour de la culture et de l’histoire LGBTI. Faits historiques, luttes, matière littéraire, cinématographique, plastiques, partageons nos connaissances et nos questionnements.
+
+            <br>
+
+            Rendez-vous mensuel proposé par l’association Démineurs.
           </p>
           <a href={{ url ('app_ateliers_lepointqueer') }} class="btn btn-dark">Go!</a>
         </div>
