--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,8 +54,8 @@
         </nav>
     </header>
     <div class="header_2 container-fluid bg-light">
-        <a class="nav-link fs-4 header_2_a" href="#">Inscription</a>
-        <a class="nav-link fs-4 header_2_a" href="#">Connexion</a>
+        <a class="nav-link fs-4 header_2_a" href={{ url('app_login') }}>Inscription</a>
+        <a class="nav-link fs-4 header_2_a" href={{ url('app_connexion') }}>Connexion</a>
     </div>
 
   
