--- a/templates/ateliers/ateliertricrochet.html.twig
+++ b/templates/ateliers/ateliertricrochet.html.twig
@@ -6,28 +6,22 @@
 
 <main>
 
-  <h1 class="text-center sf-1 fontdancing mt-3"> Atelier Dimanche de mots </h1>
+  <h1 class="text-center sf-1 fontdancing mt-3"> Atelier Tricochet </h1>
 
   <div class="container-fluid row">
 
   <div class="container-fluid col-10 ">
 
-  <p class="sf-4 p_dimanche de mots mt-3">Rendez-vous mensuel proposé par Jeff et Sophie, Le Dimanche de mots est un carrefour du dimanche.
-      L'objectif de cet atelier, qui était, à l'origine, de permettre une rencontre autour de la poésie et des lettres un dimanche par mois,
-      a tres vite été dépassé, sans jamais etre atteint. <br>
-
-      En effet, l'atelier dimanche de mots est
-       devenu un point de rencontre aléatoire et épisodique entre personnes qui ne s'attendaient pas à etre la.
-      Souvent des personnes cherchant un lieu public ouvert le dimanche s'y sont retrouvés y ont échangé, sur des sujets variés et infinis.
-      Cet atelier a vu passer des vies, des visteurs, des gens perdus, ou des gens qui s'y sont retrouvés, et cette population hétéogène s'est rencontré et a échangé.. autour d'un dimanche de mots.
-
-      Si jamais l'envie vous en prend, de découvrir un dimanche de mots, ou d'avoir plus d'informations sur cet atelier, contactez Jeff, il se fera un plaisir d'écxhanger avec vous sur ce sujet.
+  <p class="sf-4 p_dimanche de mots mt-3">Ce nouvel atelier met la pratique du fil (tricot, crochet, broderie, etc.) à l’honneur. Il s’agit de crocheter / tricoter, d’apprendre et de créer ensemble, tout en discutant autour d’une boisson chaude (ou froide).
+    <br>
+    <br>
+    Rendez vous mensuel proposé par un.e bénévole
   </p>
 
  
 
   <div class="card col-12 align-self-center">
-    <img src={{ absolute_url(asset('assets/img/flamant.jpg'))}} class="card-img" alt="...">
+    <img src={{ absolute_url(asset('assets/img/ateliers/culture/tricot.jpg'))}} class="card-img" alt="...">
     <div class="card-img-overlay">
     </div>
      
@@ -63,7 +57,7 @@
 
 
   <h2 class="fontdancing text-center mt-5">Galerie Photos de l'atelier :</h2>
-  <div class="container-fluid col-10 d-flex flex-row flex-wrap border border-dark rounded mt-5 mb-5"> 
+  <div class="container-fluid col-10 d-flex flex-row flex-wrap justify-content-around border border-dark rounded mt-5 mb-5"> 
   
     
     <div class="card m-2" style="width: 18rem;">
