--- a/templates/ateliers/obsolescencedeprogramee.html.twig
+++ b/templates/ateliers/obsolescencedeprogramee.html.twig
@@ -6,28 +6,26 @@
 
 <main>
 
-  <h1 class="text-center sf-1 fontdancing mt-3"> Atelier Dimanche de mots </h1>
+  <h1 class="text-center sf-1 fontdancing mt-3"> Obsolessence Déprogramée </h1>
 
   <div class="container-fluid row">
 
   <div class="container-fluid col-10 ">
 
-  <p class="sf-4 p_dimanche de mots mt-3">Rendez-vous mensuel proposé par Jeff et Sophie, Le Dimanche de mots est un carrefour du dimanche.
-      L'objectif de cet atelier, qui était, à l'origine, de permettre une rencontre autour de la poésie et des lettres un dimanche par mois,
-      a tres vite été dépassé, sans jamais etre atteint. <br>
+  <p class="sf-4 p_dimanche de mots mt-3">Entraide autour de la réparation d’objets divers : informatique, électroménager, jouet, machine à coudre, matériel son et vidéo, etc.
 
-      En effet, l'atelier dimanche de mots est
-       devenu un point de rencontre aléatoire et épisodique entre personnes qui ne s'attendaient pas à etre la.
-      Souvent des personnes cherchant un lieu public ouvert le dimanche s'y sont retrouvés y ont échangé, sur des sujets variés et infinis.
-      Cet atelier a vu passer des vies, des visteurs, des gens perdus, ou des gens qui s'y sont retrouvés, et cette population hétéogène s'est rencontré et a échangé.. autour d'un dimanche de mots.
-
-      Si jamais l'envie vous en prend, de découvrir un dimanche de mots, ou d'avoir plus d'informations sur cet atelier, contactez Jeff, il se fera un plaisir d'écxhanger avec vous sur ce sujet.
+    Pour répondre à la baisse constante de notre autonomie face aux problèmes rencontrés avec les objets qui nous entourent.
+    
+    Aucune compétence n’est requise…
+   <br><br>
+    
+    Rendez-vous mensuel proposé par l’association l’Ateliéphémère.
   </p>
 
  
 
   <div class="card col-12 align-self-center">
-    <img src={{ absolute_url(asset('assets/img/flamant.jpg'))}} class="card-img" alt="...">
+    <img src={{ absolute_url(asset('assets/img/ateliers/science/science_1.jpg'))}} class="card-img" alt="...">
     <div class="card-img-overlay">
     </div>
      
@@ -63,7 +61,7 @@
 
 
   <h2 class="fontdancing text-center mt-5">Galerie Photos de l'atelier :</h2>
-  <div class="container-fluid col-10 d-flex flex-row flex-wrap border border-dark rounded mt-5 mb-5"> 
+  <div class="container-fluid col-10 d-flex flex-row flex-wrap justify-content-around border border-dark rounded mt-5 mb-5"> 
   
     
     <div class="card m-2" style="width: 18rem;">
